# -Energy-Feedback-Electronic-Load

./: .gitignore  CMakeLists.txt  README.md  README_cn.md
cmake/: HostToolchain.cmake  Warnings.cmake
docs/: energy_feedback_load_design.md  hal_contract.md  planner_executor_log.md  planner_packet.md  porting_guide.md
firmware/app/include/efload_app/: startup_sequence.h  supervisor.h
firmware/app/src/: converter_tasks.c  startup_sequence.c  supervisor.c
firmware/config/: board_template.h  config_default.h
firmware/control/include/efload_control/: cc_rectifier.h  cvcf_source.h  dq_current_loop.h
firmware/control/src/: cc_rectifier.c  cvcf_source.c  dq_current_loop.c
firmware/core/include/efload_core/: types.h
firmware/hal/include/efload_hal/: hal_adc.h  hal_gpio.h  hal_protection.h  hal_pwm.h  hal_timer.h
firmware/math/include/efload_math/: clarke_park.h  constants.h  lpf.h  pi.h  pll.h  ramp.h  svpwm.h
firmware/math/src/: clarke_park.c  lpf.c  pi.c  pll.c  ramp.c  svpwm.c
firmware/platform/host/include/efload_host/: hal_mock.h  plant_sim.h
firmware/platform/host/src/: hal_mock.c  plant_sim.c
firmware/platform/stm32_stub/: README.md  README_cn.md  hal_pwm_stub.c
firmware/platform/stm32_template/: README_CubeMX.md  README_CubeMX_cn.md  board_template_stm32.h  efload_port.c  efload_port.h
tests/integration/: test_cc_closed_loop.c  test_cvcf_closed_loop.c
tests/safety/: test_fault_latch.c
tests/unit/: test_clarke_park.c  test_pi.c  test_pll.c  test_svpwm.c
